--- a/htb.yaml
+++ b/htb.yaml
@@ -1,25 +1,27 @@
 openapi: 3.0.0
 info:
-  title: SSRF
+  title: API de SSRF na Raiz
   version: 1.0.0
 servers:
-  - url: http://127.0.0.1   
+  - url: http://127.0.0.1
 
 paths:
-  /fetch:
+  /:
     get:
-      summary: “Endpoint que vai buscar a URL enviada (potencial SSRF)”
+      summary: "endpoint"
       parameters:
         - in: query
           name: url
           required: true
           schema:
             type: string
-          description: “URL que o servidor irá acessar internamente”
+          description: "url"
       responses:
         '200':
-          description: “Conteúdo retornado pela URL buscada”
+          description: "Retorna"
           content:
             text/plain:
               schema:
                 type: string
+        '400':
+          description: "url"
